# haskell-monad-composition

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  build.sh  monad-composition-example.cabal
app/: Main.hs
src/: Pascal.hs
test/: PascalTest.hs  Spec.hs
