cabal-version:      2.4
name:               monad-composition-example
version:            0.1.0.0
synopsis:           monad composition example

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Francesco Burelli
maintainer:         francesco.burelli@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Pascal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12 && <5
                    , text ^>=1.2.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable monad-composition-example
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.12 && <5
                    , monad-composition-example

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite monad-composition-example-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    PascalTest
    build-depends:    base >=4.12 && <5
                    , HUnit ^>=1.6.2.0
                    , monad-composition-example

